--- a/websocket-dto/pom.xml
+++ b/websocket-dto/pom.xml
@@ -12,7 +12,7 @@
 	<properties>
 		<mybatisplus.version>2.1.4</mybatisplus.version>
 		
-		<jackson.version>2.8.9</jackson.version>
+		<jackson.version>2.9.6</jackson.version>
 		<httpclient.version>4.5.3</httpclient.version>
 		
 		<logging.version>1.2</logging.version>
@@ -86,17 +86,17 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>${jackson.version}</version>
+			<version>${jackson.version}</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>${jackson.version}</version>
+			<version>${jackson.version}</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
     		<artifactId>jackson-dataformat-yaml</artifactId>
-			<version>${jackson.version}</version>
+			<version>${jackson.version}</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		<dependency>
 			<groupId>net.sf.json-lib</groupId>
@@ -109,7 +109,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>${httpclient.version}</version>
+			<version>${httpclient.version}</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		
 		<!-- Log -->
@@ -126,12 +126,12 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
+			<version>${slf4j.version}</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j.version}</version>
+			<version>${slf4j.version}</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 	</dependencies>
 </project>
